Showing splash screen correctly without content bleeding in

--- a/public/css/app.styl
+++ b/public/css/app.styl
@@ -615,16 +615,16 @@ main
 		display block
 		cursor progress
 
-	#main, nav
-		display none
+	main, nav
+		visibility hidden
 
 	// JS and Persona ready!
 	.state-ready
 
 		#splash-screen
 			display none
-		#main, nav
-			display block
+		main, nav
+			visibility visible
 
 
 	.hexicon.hexicon-medium
